update header with method BEM

--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 
 <body>
     <header>
-        <div id="banner__header">
-            <div id="banner__header--title">
-                <img src="public/img/logo.svg" alt="" id="banner__header--title__logo">
-                <h1 id="banner__header--title__title">web dev notes</h1>
+        <div class="bannerHeader">
+            <div class="bannerHeader__title">
+                <img src="public/img/logo.svg" alt="logo de web dev notes" class="bannerHeader__title--logo">
+                <h1 class="bannerHeader__title--title">web dev notes</h1>
             </div>
-            <ul id="banner__header--navbar">
-                <li><i class="fab fa-bitbucket"></i></li>
-                <li><i class="fab fa-linkedin-in"></i>
-                <li><i class="fab fa-github"></i></li>
-                <li><i class="fab fa-codepen"></i></li>
-                <li><i class="fab fa-stack-overflow"></i></li>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fas fa-envelope-square"></i></li>
+            <ul class="bannerHeader__navbar">
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-bitbucket"></i></li>
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-linkedin-in"></i>
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-github"></i></li>
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-codepen"></i></li>
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-stack-overflow"></i></li>
+                <li class="bannerHeader__navbar--icon"><i class="fab fa-twitter"></i></li>
+                <li class="bannerHeader__navbar--icon"><i class="fas fa-envelope-square"></i></li>
             </ul>
         </div>
-        <p id="header_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque magnam necessitatibus
-            dolor. Ullam ex
-            suscipit mollitia id repudiandae laudantium. Et officiis maiores quis ea unde.</p>
+        <p class="header_text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque magnam necessitatibus
+            dolor. Ullam ex suscipit mollitia id repudiandae laudantium. Et officiis maiores quis ea unde.
+        </p>
     </header>
     <div id="content">
         <!-- NAVBAR LEFT -->
@@ -295,6 +296,7 @@
                 </div>
             </article>
         </section>
+        <!-- ARTICLE -->
     </div>
 </body>
 
