--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@
             </article>
         </section>
         <!-- ARTICLE -->
+        <button class="btn-next-page">Go to next Page</button>
+        <div class="banner">
+            <div class="banner__title">
+                <img src="public/img/logo.svg" alt="logo de web dev notes" class="banner__title--logo">
+                <h1 class="banner__title--title">web dev notes</h1>
+            </div>
+            <ul class="banner__navbar">
+                <li class="banner__navbar--icon"><i class="fab fa-bitbucket"></i></li>
+                <li class="banner__navbar--icon"><i class="fab fa-linkedin-in"></i>
+                <li class="banner__navbar--icon"><i class="fab fa-github"></i></li>
+                <li class="banner__navbar--icon"><i class="fab fa-codepen"></i></li>
+                <li class="banner__navbar--icon"><i class="fab fa-stack-overflow"></i></li>
+                <li class="banner__navbar--icon"><i class="fab fa-twitter"></i></li>
+                <li class="banner__navbar--icon"><i class="fas fa-envelope-square"></i></li>
+            </ul>
+        </div>
     </div>
 </body>
 
