--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
                 <div class="post__body">
                     <h3 class="post__body--title">Build and publish a Ionic App</h3>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
-                                class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span>
+                            <i class="far fa-user-circle post__meta--icon"></i>
+                            <a href="" class="post__meta--author">Author</a>
+                        </span>
+                        <span>
+                            <i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002
+                        </span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -107,9 +111,9 @@
                     <h4 class="post__body--title">3 Must Have Tools for JavaScript App Development Programmers Who Do
                         NOT Love JavaScript</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -130,9 +134,9 @@
                     <h4 class="post__body--title">3 Must Have Tools for JavaScript App Development Programmers Who Do
                         NOT Love JavaScript</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -152,9 +156,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -174,9 +178,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -195,9 +199,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -217,9 +221,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -238,9 +242,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -260,9 +264,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -282,9 +286,9 @@
                 <div class="post__body">
                     <h4 class="post__body--title">Build and publish a Ionic App</h4>
                     <div class="post__meta">
-                        <span><i class="far fa-user-circle post__meta--favicon"></i><a href=""
+                        <span><i class="far fa-user-circle post__meta--icon"></i><a href=""
                                 class="post__meta--author">Author</a></span>
-                        <span><i class="far fa-calendar-alt post__meta--favicon"></i>21/10/2002</span>
+                        <span><i class="far fa-calendar-alt post__meta--icon"></i>21/10/2002</span>
                     </div>
                     <p class="post__body--excerpt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolor
@@ -305,19 +309,19 @@
         <!-- BTN  -->
 
         <!-- BANNER -->
-        <div class="banner">
-            <div class="banner__title">
-                <img src="public/img/logo.svg" alt="logo de web dev notes" class="banner__title--logo">
-                <h1 class="banner__title--title">web dev notes</h1>
+        <div class="bannerFloat">
+            <div class="bannerFloat__title">
+                <img src="public/img/logo.svg" alt="logo de web dev notes" class="bannerFloat__title--logo">
+                <h5 class="bannerFloat__title--title">web dev notes</h5>
             </div>
-            <ul class="banner__navbar">
-                <li class="banner__navbar--icon"><i class="fab fa-bitbucket"></i></li>
-                <li class="banner__navbar--icon"><i class="fab fa-linkedin-in"></i>
-                <li class="banner__navbar--icon"><i class="fab fa-github"></i></li>
-                <li class="banner__navbar--icon"><i class="fab fa-codepen"></i></li>
-                <li class="banner__navbar--icon"><i class="fab fa-stack-overflow"></i></li>
-                <li class="banner__navbar--icon"><i class="fab fa-twitter"></i></li>
-                <li class="banner__navbar--icon"><i class="fas fa-envelope-square"></i></li>
+            <ul class="bannerFloat__navbar">
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-bitbucket"></i></li>
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-linkedin-in"></i>
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-github"></i></li>
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-codepen"></i></li>
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-stack-overflow"></i></li>
+                <li class="bannerFloat__navbar--icon"><i class="fab fa-twitter"></i></li>
+                <li class="bannerFloat__navbar--icon"><i class="fas fa-envelope-square"></i></li>
             </ul>
         </div>
         <!-- BANNER -->
