--- a/index.html
+++ b/index.html
@@ -301,10 +301,7 @@
         <!-- ARTICLE -->
         <!-- BTN -->
         <div class="block-btn">
-            <button class="btn">
-                <a href="" class="btn__link">Go to next Page</a>
-                <i class="fas fa-forward btn__icon"></i>
-            </button>
+            <a href="" class="btn">Go to next Page<i class="fas fa-forward btn__icon"></i></a>
         </div>
         <!-- BTN  -->
 
